@@ -5345,16 +5345,17 @@ following symbols;
      (when (and twittering-icon-mode window-system)
        (let ((url
 	      (cond
-	       ((or (null twittering-convert-fix-size)
-		    (member twittering-convert-fix-size '(48 73)))
+	       ((and (eq twittering-service-method 'twitter)
+		     (or (null twittering-convert-fix-size)
+			 (member twittering-convert-fix-size '(48 73))))
 		(let ((user (cdr (assq 'user-screen-name ,status-sym)))
 		      (size
 		       (if (or (null twittering-convert-fix-size)
 			       (= 48 twittering-convert-fix-size))
 			   "normal"
 			 "bigger")))
-		  (format "http://%s/1/users/profile_image/%s.xml?size=%s"
-			  twittering-api-host user size)))
+		  (format "http://%s/%s/%s.xml?size=%s" twittering-api-host
+			  (twittering-api-path "users/profile_image") user size)))
 	       (t
 		(cdr (assq 'user-profile-image-url ,status-sym))))))
 	 (twittering-make-icon-string nil nil url))))
