@@ -1,3 +1,8 @@
+2010-07-06  Takashi Masuda  <masutaka@nifty.com>
+
+	* twittering-mode.el (twittering-generate-format-table):
+	Do not Use icon images scaled by API unless Twitter.
+
 2010-07-04  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el (twittering-redisplay-status-on-buffer): Fix
